.provarCaches/00D410000011HE0EAM/objects/rstkf__arcashddist__c.object
<CustomObject>
    <description>arcashddist__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_arapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Transaction</label>
        <referenceTo>rstkf__arapplic__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_arcashd__c</fullName>
        <label>Cash Receipts Detail</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_cramt__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_cramtcash__c</fullName>
        <formula>IF(rstkf__arcashddist_source__c == &apos;701&apos; || rstkf__arcashddist_source__c == &apos;711&apos; || rstkf__arcashddist_source__c == &apos;781&apos; || rstkf__arcashddist_source__c == &apos;782&apos; || rstkf__arcashddist_source__c == &apos;790&apos; , rstkf__arcashddist_cramt__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Amount Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_dramt__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_dramtcash__c</fullName>
        <formula>IF(rstkf__arcashddist_source__c == &apos;701&apos; || rstkf__arcashddist_source__c == &apos;711&apos; || rstkf__arcashddist_source__c == &apos;781&apos; || rstkf__arcashddist_source__c == &apos;782&apos; || rstkf__arcashddist_source__c == &apos;790&apos; , rstkf__arcashddist_dramt__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Amount Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_forcashtogl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Cash to GL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Cash Receipts Distributions</relationshipLabel>
        <relationshipName>arcashddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_seq__c</fullName>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashddist_source__c</fullName>
        <label>Posting Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcashddist_arcashd__r.rstkf__externalid__c  &amp; &apos;_&apos; &amp;  rstkf__arcashddist_seq__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcashddist_arcashd__r.Name  &amp; &apos;-&apos; &amp; rstkf__arcashddist_seq__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Cash Receipts Distribution</label>
    <listViews>
        <fullName>Cash_Receipts_Distributions_AC</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashddist_glacct__c</columns>
        <columns>rstkf__arcashddist_dramt__c</columns>
        <columns>rstkf__arcashddist_cramt__c</columns>
        <columns>rstkf__arcashddist_dimvals__c</columns>
        <columns>rstkf__arcashddist_cramtcash__c</columns>
        <columns>rstkf__arcashddist_dramtcash__c</columns>
        <columns>rstkf__arcashddist_arapplic__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__arcashddist_source__c</columns>
        <columns>rstkf__arcashddist_arcashd__c</columns>
        <columns>rstkf__arcashddist_gldiv__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cash Receipts Distributions-AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Distributions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashddist_glacct__c</columns>
        <columns>rstkf__arcashddist_dramt__c</columns>
        <columns>rstkf__arcashddist_cramt__c</columns>
        <columns>rstkf__arcashddist_dimvals__c</columns>
        <columns>rstkf__arcashddist_source__c</columns>
        <columns>rstkf__arcashddist_gltxn__c</columns>
        <columns>rstkf__arcashddist_arapplic__c</columns>
        <columns>rstkf__arcashddist_arcashd__c</columns>
        <columns>rstkf__arcashddist_gldiv__c</columns>
        <columns>rstkf__arcashddist_glproj__c</columns>
        <columns>rstkf__arcashddist_cramtcash__c</columns>
        <columns>rstkf__arcashddist_dramtcash__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cash Receipts Distributions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Distributions_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashddist_glacct__c</columns>
        <columns>rstkf__arcashddist_dramt__c</columns>
        <columns>rstkf__arcashddist_cramt__c</columns>
        <columns>rstkf__arcashddist_dimvals__c</columns>
        <columns>rstkf__arcashddist_source__c</columns>
        <columns>rstkf__arcashddist_gltxn__c</columns>
        <columns>rstkf__arcashddist_arapplic__c</columns>
        <columns>rstkf__arcashddist_arcashd__c</columns>
        <columns>rstkf__arcashddist_gldiv__c</columns>
        <columns>rstkf__arcashddist_glproj__c</columns>
        <columns>rstkf__arcashddist_cramtcash__c</columns>
        <columns>rstkf__arcashddist_dramtcash__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Cash Receipts Distributions - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>